# axum-service-example

./: Cargo.toml  flake.nix
src/: main.rs
