[package]
name = "axum-service-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
axum = "0.3.4"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
